# milk

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  CTestConfig.cmake  Dockerfile  LICENSE  README.md  check_folders_dev.sh  compile.sh  deploy_pre_commit.sh  deployconfig  fetch_atmosphere_dev.sh  fetch_cacao_dev.sh  fetch_coffee_dev  fetch_coffee_dev.sh  fetch_milk_dev.sh  milk.pc.in  patch_cacao_lapacke_optional.txt  pip_install.sh  setup.py  vscode_submodule_fix.sh
plugins/milk-extra-src/ZernikePolyn/: CMakeLists.txt  README.md  ZernikePolyn.c  ZernikePolyn.h  mkzercube.c  mkzercube.h  zernike.h  zernike_value.c  zernike_value.h
plugins/milk-extra-src/clustering/: CFmeminit.c  CFmeminit.h  CFtree_rebuild.c  CFtree_rebuild.h  CMakeLists.txt  addvector_to_CF.c  addvector_to_CF.h  clustering.c  clustering.h  clustering_defs.h  compute_imdistance_double.c  compute_imdistance_double.h  condense.c  condense.h  create_new_leaf.c  create_new_leaf.h  ctree_init.c  ctree_init.h  ctree_memallocate.c  ctree_memallocate.h  ctree_memfree.c  ctree_memfree.h  cubecluster.c  cubecluster.h  droptree.c  droptree.h  get_availableCFindex.c  get_availableCFindex.h  leaf_addentry.c  leaf_addentry.h  leafnode_attachleaf.c  leafnode_attachleaf.h  mindiffscan.c  mindiffscan.h  node_attachnode.c  node_attachnode.h  printCFtree.c  printCFtree.h  split_CF_node.c  split_CF_node.h  (+2 more)
plugins/milk-extra-src/cudacomp/: CMakeLists.txt  Coeff2Map_Loop.c  Coeff2Map_Loop.h  GPU_SVD_computeControlMatrix.c  GPU_loop_MultMat_execute.c  GPU_loop_MultMat_free.c  GPU_loop_MultMat_free.h  GPU_loop_MultMat_setup.c  GPUloadCmat.c  MVM_CPU.c  MVM_CPU.h  MVMextractModes.c  MVMextractModes.h  MatMatMult_testPseudoInverse.c  MatMatMult_testPseudoInverse.h  PCA.c  PCA.h  README.md  SingularValueDecomp.c  SingularValueDecomp.h  cudacomp.c  cudacomp.h  cudacomp_MVMextractModesLoop.c  cudacomp_MVMextractModesLoop.h  cudacomp_types.h  cudacompinit.c  cudacompinit.h  cudacomptest.c  cudacomptest.h  eigenv.dat.gsl  magma_compute_SVDpseudoInverse.c  magma_compute_SVDpseudoInverse.h  magma_compute_SVDpseudoInverse_SVD.c  magma_compute_SVDpseudoInverse_SVD.h  matU1.fits  matVT.fits  printGPUMATMULTCONF.c  printGPUMATMULTCONF.h
plugins/milk-extra-src/fft/: .gitignore  CMakeLists.txt  DFT.c  DFT.h  README.md  dofft.c  dofft.h  fft.c  fft.h  fft_autocorrelation.c  fft_autocorrelation.h  fft_structure_function.c  fft_structure_function.h  (+18 more)
python_module/: CMakeLists.txt  CacaoProcessTools.cpp  README.md  pyCream.cpp  pyFps.hpp  pyProcessInfo.hpp
src/COREMOD_arith/: CMakeLists.txt  COREMOD_arith.c  COREMOD_arith.h  README.md  execute_arith.c  execute_arith.h  image_arith__Cim_Cim__Cim.c  image_arith__Cim_Cim__Cim.h  image_arith__im__im.c  image_arith__im__im.h  image_arith__im_f__im.c  image_arith__im_f__im.h  image_arith__im_f_f__im.c  image_arith__im_f_f__im.h  image_arith__im_im__im.c  image_arith__im_im__im.h  image_crop.c  image_crop.h  image_cropmask.c  image_cropmask.h  image_dxdy.c  image_dxdy.h  image_merge3D.c  image_merge3D.h  image_norm.c  image_norm.h  image_pixremap.c  image_pixremap.h  image_pixunmap.c  image_pixunmap.h  image_set_1Dpixrange.c  image_set_1Dpixrange.h  image_set_2Dpix.c  image_set_2Dpix.h  image_set_col.c  image_set_col.h  image_set_row.c  image_set_row.h  image_setzero.c  image_setzero.h  (+14 more)
src/COREMOD_iofits/: CMakeLists.txt  COREMOD_iofits.c  COREMOD_iofits.h  COREMOD_iofits_common.h  Makefile.am  Makefile.in  README.md  breakcube.c  breakcube.h  check_fitsio_status.c  check_fitsio_status.h  data_type_code.c  data_type_code.h  file_exists.c  file_exists.h  images2cube.c  images2cube.h  is_fits_file.c  is_fits_file.h  loadfits.c  loadfits.h  loadmemstream.c  loadmemstream.h  read_keyword.c  read_keyword.h  savefits.c  savefits.h
src/COREMOD_memory/: .gitignore  CMakeLists.txt  COREMOD_memory.c  COREMOD_memory.h  OBSOLETE_stream_delay.c  OBSOLETE_stream_delay.h  README.md  clearall.c  clearall.h  compute_image_memory.c  compute_image_memory.h  compute_nb_image.c  compute_nb_image.h  compute_nb_variable.c  compute_nb_variable.h  create_fps.c  create_fps.h  create_image.c  create_image.h  create_variable.c  create_variable.h  delete_image.c  delete_image.h  delete_sharedmem_image.c  delete_sharedmem_image.h  delete_variable.c  delete_variable.h  fps_ID.c  fps_ID.h  fps_create.c  fps_create.h  fps_list.c  fps_list.h  image_ID.c  image_ID.h  image_checksize.c  image_checksize.h  image_complex.c  image_complex.h  image_copy.c  (+85 more)
src/COREMOD_tools/: CMakeLists.txt  COREMOD_tools.c  COREMOD_tools.h  README.md  fileutils.c  fileutils.h  imdisplay3d.c  imdisplay3d.h  linregress.c  linregress.h  logfunc.c  logfunc.h  mvprocCPUset.c  mvprocCPUset.h  quicksort.c  quicksort.h  statusstat.c  statusstat.h  stringutils.c  stringutils.h  timeutils.c  timeutils.h
src/CommandLineInterface/: .gitignore  CHANGELOG.md  CLIcore.c  CLIcore.h  CLIcore_UI.c  CLIcore_UI.h  CLIcore_checkargs.c  CLIcore_checkargs.h  CLIcore_datainit.c  CLIcore_datainit.h  CLIcore_help.c  CLIcore_help.h  CLIcore_memory.c  CLIcore_memory.h  CLIcore_modules.c  CLIcore_modules.h  CLIcore_setSHMdir.c  CLIcore_setSHMdir.h  CLIcore_signals.c  CLIcore_signals.h  CLIcore_utils.c  CLIcore_utils.h  CMakeLists.txt  IMGID.h  README.md  TUItools.c  TUItools.h  calc.h  calc_bison.c  calc_bison.h  calc_bison.y  calc_flex.c  calc_flex.l  cmdsettings.h  fpsCTRL_TUI.c  fpsCTRL_TUI.h  fpsCTRL_TUI_process_user_key.c  fpsCTRL_TUI_process_user_key.h  fps_CONFstart.c  fps_CONFstart.h  (+107 more)
src/milk_module_example/: CMakeLists.txt  create_example_image.c  create_example_image.h  examplefunc1.c  examplefunc1.h  examplefunc2_FPS.c  examplefunc2_FPS.h  examplefunc3_updatestreamloop.c  examplefunc3_updatestreamloop.h  examplefunc4_streamprocess.c  examplefunc4_streamprocess.h  milk_module_example.c  milk_module_example.h  simplefunc.c  simplefunc.h  simplefunc_FPS.c  simplefunc_FPS.h  stream_process_loop_simple.c  stream_process_loop_simple.h  updatestreamloop.c  updatestreamloop.h  updatestreamloop.h.save  updatestreamloop_brief.c
(+524 files in other folders)
